<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmationActivity">

    <TextView
        android:id="@+id/Dropoff_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="63dp"
        android:contentDescription="@string/tag_for_drop_off"
        android:labelFor="@id/Dropoffloc_value"
        android:text="@string/dropoff_location"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PickupLoc_value" />

    <TextView
        android:id="@+id/Pickup_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:contentDescription="@string/tag_for_pick_up"
        android:labelFor="@id/Price_value"
        android:text="@string/pickup_location"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Distance_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/tage_for_distance"
        android:labelFor="@id/Distance_value"
        android:text="@string/estimated_distance"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Dropoffloc_value" />

    <TextView
        android:id="@+id/Price_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="38dp"
        android:contentDescription="@string/tag_for_price"
        android:labelFor="@id/Price_value"
        android:text="@string/estimated_price"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Distance_value" />

    <TextView
        android:id="@+id/PickupLoc_value"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text=""
        android:textSize="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Pickup_tag" />

    <TextView
        android:id="@+id/Dropoffloc_value"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text=""
        android:textSize="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Dropoff_tag" />

    <TextView
        android:id="@+id/Price_value"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:text=""
        android:textSize="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Price_tag" />

    <TextView
        android:id="@+id/Distance_value"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text=""
        android:textSize="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Distance_tag" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="162dp"
        android:layout_marginEnd="280dp"
        android:layout_marginBottom="10dp"
        android:contextClickable="true"
        android:text="CONFIRM"
        app:layout_constraintBottom_toTopOf="@+id/cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Price_value" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="280dp"
        android:layout_marginBottom="90dp"
        android:contextClickable="true"
        android:text="CANCEL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_button" />


</androidx.constraintlayout.widget.ConstraintLayout>