<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="#130C0C"
    tools:context="com.example.cabify.LoginActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="@dimen/_130sdp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.145"
        app:srcCompat="@drawable/login_screen_image" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="@dimen/_210sdp"
        android:layout_height="@dimen/_33sdp"
        android:text="@string/login_title"
        android:textColor="#f9f073"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_48sdp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/logpwd"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.678" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="141dp"
        android:layout_height="58dp"
        android:backgroundTint="#eaad1a"
        android:text="@string/mainlogin"
        android:textColor="#0B0A0A"
        android:textSize="@dimen/_22ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.882" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="364dp"
        android:layout_height="50dp"
        android:hint="@string/check"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.767" />

    <ImageButton
        android:id="@+id/loginBackBtn"
        android:layout_width="58dp"
        android:layout_height="48dp"
        android:backgroundTint="#F4F1F1"
        android:contentDescription="@string/google_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/backbtn"
        tools:ignore="RedundantDescriptionCheck" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_48sdp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/logem"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/loginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle"
        app:layout_constraintVertical_bias="0.395" />

    <ImageButton
        android:id="@+id/google"
        android:layout_width="63dp"
        android:layout_height="51dp"
        android:backgroundTint="#120D0D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958"
        app:srcCompat="@drawable/gg" />


</androidx.constraintlayout.widget.ConstraintLayout>