<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp">

        <ImageView
            android:id="@+id/driver_image"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="23dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="305dp"
            android:contentDescription="@string/driver_image"
            android:hapticFeedbackEnabled="false"
            android:src="@drawable/ic_baseline_person_24" />

        <TextView
            android:id="@+id/driver_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="23dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="169dp"
            android:text="@string/available"
            android:textColor="#A1887F"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/driver_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginVertical="60dp"
            android:layout_marginStart="114dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="90dp"
            android:fontFamily="sans-serif"
            android:text="@string/name"
            android:textColor="#A1887F"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>
